# DrugDiscoveryAIFinalproject

DrugDiscoveryAI/: app.py  pyproject.toml  replit.nix
DrugDiscoveryAI/data/: logs.csv  users.json
DrugDiscoveryAI/models/: druglikeness.py  toxicity.py
DrugDiscoveryAI/utils/: auth_utils.py  molecular_utils.py  prediction_utils.py
